--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     }
   },
   "require": {
-    "yiisoft/yii": "~1.1.*",
+    "yiisoft/yii": "1.1.*",
     "php":">=5.3"
   },
   "require-dev": {
